--- a/config.json
+++ b/config.json
@@ -1,6 +1,7 @@
 {
 	"current-ver": "2.0.0 rc5",
 	"url": "https://download.sublimetext.com/Sublime%20Text%20Build%203126%20x64%20Setup.exe",
+	"port": 80,
 	"filename": "update.exe",
 	"manager": "./manager.bat"
 }
